Authentication added
