# swagger.json
@@ -25,11 +25,28 @@
         }
       }
     },
+    "/login": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/logout": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
     "/lovebox/": {
       "get": {
-        "tags": [
-          "lovebox"
-        ],
         "description": "",
         "produces": [
           "application/json"
@@ -44,9 +61,6 @@
         }
       },
       "post": {
-        "tags": [
-          "lovebox"
-        ],
         "description": "",
         "parameters": [
           {
@@ -98,9 +112,6 @@
     },
     "/lovebox/{id}": {
       "get": {
-        "tags": [
-          "lovebox"
-        ],
         "description": "",
         "produces": [
           "application/json"
@@ -129,9 +140,6 @@
         }
       },
       "put": {
-        "tags": [
-          "lovebox"
-        ],
         "description": "",
         "parameters": [
           {
@@ -190,9 +198,6 @@
         }
       },
       "delete": {
-        "tags": [
-          "lovebox"
-        ],
         "description": "",
         "parameters": [
           {
@@ -220,9 +225,6 @@
     },
     "/connectbox/": {
       "get": {
-        "tags": [
-          "connectbox"
-        ],
         "description": "",
         "produces": [
           "application/json"
@@ -237,9 +239,6 @@
         }
       },
       "post": {
-        "tags": [
-          "connectbox"
-        ],
         "description": "",
         "parameters": [
           {
@@ -291,9 +290,6 @@
     },
     "/connectbox/{id}": {
       "get": {
-        "tags": [
-          "connectbox"
-        ],
         "description": "",
         "produces": [
           "application/json"
@@ -322,9 +318,6 @@
         }
       },
       "put": {
-        "tags": [
-          "connectbox"
-        ],
         "description": "",
         "parameters": [
           {
@@ -383,9 +376,6 @@
         }
       },
       "delete": {
-        "tags": [
-          "connectbox"
-        ],
         "description": "",
         "parameters": [
           {
